[feat]:salesMembers test, teamService test - 코드 정리 - test case (진행중)